# tsapiness

./: .gitignore  LICENSE.txt  README.md  connector_sss.py  connector_tsapi.py  example_sav.py  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py  tsapi.py
examples/: example_api.py  example_sav.py  example_triple_s.py
scripts/: update-setup.py
src/: main.py
src/tsapi_py/: __init__.py  tsapi.py
src/tsapi_py/connectors/: connector_sav.py  connector_sss.py  connector_tsapi.py
src/tsapiness/: __init__.py  connector_sav.py  connector_sss.py  connector_tsapi.py  tsapi.py
tests/: test_tsapi.py  test_utils.py
tsapi_py/: __init__.py  tsapi.py
tsapi_py/connectors/: connector_sav.py  connector_sss.py  connector_tsapi.py
tsapiness/: __init__.py  connector_sav.py  connector_sss.py  tsapi.py  utils.py
