[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsapiness"
version = "0.0.4"
authors = [
  { name="Andrew Le Breuilly", email="andrew@arrowstream.co.uk" },
]
description = "An open source python package to connect survey data to the survey definition defined by tsapi"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['requests', 'pyreadstat']

[project.urls]
"Homepage" = "https://github.com/ArrowstreamUK/TSAPI-py"
"Bug Tracker" = "https://github.com/ArrowstreamUK/TSAPI-py/issues"